WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218052
[macOS] Set application information in the Networking process on behalf of the WebContent process
https://bugs.webkit.org/show_bug.cgi?id=218052
Summary
[macOS] Set application information in the Networking process on behalf of th...
Per Arne Vollan
Reported
2020-10-21 14:09:10 PDT
In preparation for blocking Launch Services in the WebContent process' sandbox, application information for the process should be set in the Networking process.
Attachments
Patch
(14.14 KB, patch)
2020-10-21 16:29 PDT
,
Per Arne Vollan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(15.48 KB, patch)
2020-10-21 16:50 PDT
,
Per Arne Vollan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(15.54 KB, patch)
2020-10-21 17:01 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(15.77 KB, patch)
2020-10-22 09:14 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(17.79 KB, patch)
2020-11-05 09:18 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(17.28 KB, patch)
2020-11-05 10:04 PST
,
Per Arne Vollan
bfulgham
: review+
Details
Formatted Diff
Diff
Patch
(17.35 KB, patch)
2020-11-09 12:59 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(20.13 KB, patch)
2020-11-28 07:32 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2020-10-21 16:29:17 PDT
Created
attachment 412044
[details]
Patch
Per Arne Vollan
Comment 2
2020-10-21 16:50:15 PDT
Created
attachment 412046
[details]
Patch
Per Arne Vollan
Comment 3
2020-10-21 17:01:03 PDT
Created
attachment 412048
[details]
Patch
Per Arne Vollan
Comment 4
2020-10-22 09:14:06 PDT
Created
attachment 412105
[details]
Patch
Radar WebKit Bug Importer
Comment 5
2020-10-22 13:16:23 PDT
<
rdar://problem/70586405
>
Per Arne Vollan
Comment 6
2020-11-05 09:18:40 PST
Created
attachment 413311
[details]
Patch
Per Arne Vollan
Comment 7
2020-11-05 10:04:17 PST
Created
attachment 413317
[details]
Patch
Brent Fulgham
Comment 8
2020-11-05 13:43:18 PST
Comment on
attachment 413317
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=413317&action=review
r=me
> Source/WTF/ChangeLog:4 > +
https://bugs.webkit.org/show_bug.cgi?id=218052
<
rdar://problem/70586405
>
> Source/WebCore/PAL/ChangeLog:4 > +
https://bugs.webkit.org/show_bug.cgi?id=218052
<
rdar://problem/70586405
>
> Source/WebKit/ChangeLog:4 > +
https://bugs.webkit.org/show_bug.cgi?id=218052
rdar://problem/70586405
> Source/WebKit/NetworkProcess/mac/NetworkConnectionToWebProcessMac.mm:38 > + if (!overrideDisplayName)
Do we override if 'overrideDisplayName' is an empty string? I think this code will use a blank string for the name -- is that what we want?
> Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:687 > + WTFLogAlways("Unable to get audit token for self.");
Shouldn't we show the error # in this log message?
Per Arne Vollan
Comment 9
2020-11-09 12:59:30 PST
Created
attachment 413623
[details]
Patch
Per Arne Vollan
Comment 10
2020-11-09 13:09:11 PST
(In reply to Brent Fulgham from
comment #8
)
> Comment on
attachment 413317
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=413317&action=review
> > r=me > > > Source/WTF/ChangeLog:4 > > +
https://bugs.webkit.org/show_bug.cgi?id=218052
> > <
rdar://problem/70586405
> > > > Source/WebCore/PAL/ChangeLog:4 > > +
https://bugs.webkit.org/show_bug.cgi?id=218052
> > <
rdar://problem/70586405
> > > > Source/WebKit/ChangeLog:4 > > +
https://bugs.webkit.org/show_bug.cgi?id=218052
> >
rdar://problem/70586405
> > > Source/WebKit/NetworkProcess/mac/NetworkConnectionToWebProcessMac.mm:38 > > + if (!overrideDisplayName) > > Do we override if 'overrideDisplayName' is an empty string? I think this > code will use a blank string for the name -- is that what we want? >
Yes, you're right, that is a good point. I am not quite sure what the expected behavior here is. This patch should not change the current behavior, I believe.
> > Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:687 > > + WTFLogAlways("Unable to get audit token for self."); > > Shouldn't we show the error # in this log message?
Fixed. Thanks for reviewing!
Per Arne Vollan
Comment 11
2020-11-28 07:32:08 PST
Created
attachment 414977
[details]
Patch
EWS
Comment 12
2020-11-28 09:05:44 PST
Committed
r270219
: <
https://trac.webkit.org/changeset/270219
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 414977
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug