[macOS] Set application information in the Networking process on behalf of the WebContent process https://bugs.webkit.org/show_bug.cgi?id=218052 <rdar://problem/70586405>

Reviewed by Brent Fulgham.

Source/WebCore/PAL:

Declare function to create ASN from an audit token.

* pal/spi/cocoa/LaunchServicesSPI.h:

Source/WebKit:

In preparation for blocking Launch Services in the WebContent process' sandbox, application information for the process
should be set in the Networking process.

* NetworkProcess/NetworkConnectionToWebProcess.h:
* NetworkProcess/NetworkConnectionToWebProcess.messages.in:
* NetworkProcess/mac/NetworkConnectionToWebProcessMac.mm: Added.
(WebKit::NetworkConnectionToWebProcess::updateActivePages):
* Scripts/process-entitlements.sh:
* WebKit.xcodeproj/project.pbxproj:
* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::platformInitializeWebProcess):
(WebKit::activePagesOrigins):
(WebKit::WebProcess::updateActivePages):
(WebKit::WebProcess::getActivePagesOriginsForTesting):
* WebProcess/com.apple.WebProcess.sb.in:

Source/WTF:

Add define to enable this feature.

* wtf/PlatformEnableCocoa.h:


Canonical link: https://commits.webkit.org/231928@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270219 268f45cc-cd09-0410-ab3c-d52691b4dbfc